[workspace]

members = [
    "cargo-rcc",
    "circuit-examples",
    "rcc",
    "rcc-lib",
    "rcc-halo2",
    "rcc-macro",
    "rcc-mockbuilder",
]

[patch."https://github.com/privacy-scaling-explorations/halo2.git"]
halo2_proofs = { git = "https://github.com/powdr-org/halo2", branch = "kilic/shuffle"}

[patch.crates-io]
halo2_proofs = { git = "https://github.com/powdr-org/halo2", branch = "kilic/shuffle"}

[profile.dev.package."circuit-examples"]
debug = false
debug-assertions = false
overflow-checks = false

# Speed up witness gen compilation
# opt-level = 3 is about 50x slower
# [profile.release.package."circuit-examples"]
# opt-level = 0

# An alternative choice is opt-level = 1 but with lto off
# [profile.release]
# lto = "off"

# [profile.release.package."circuit-examples"]
# opt-level = 1

