[package]
name = "circuit-examples"
version = "0.0.1"
edition = "2021"
license = "MIT OR Apache-2.0"

[dependencies]
rcc = { path = "../rcc" }
rcc-macro = { path = "../rcc-macro" }
rcc-mockbuilder = { path = "../rcc-mockbuilder" }
rcc-halo2 = { path = "../rcc-halo2" }
ark-ff = "0.4.0"
ark-bn254 = "0.4.0"

