[package]
name = "rcc-halo2"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"

[dependencies]
quote = "1.0"
proc-macro2 = "1.0"
indexmap = "1.9.2"
rcc = { path = "../rcc" }
rcc-macro = { path = "../rcc-macro" }
num-bigint = "^0.4"
ark-ff = "^0.4"
ark-bn254 = "^0.4"
# polyexen = { git = "https://github.com/Dhole/polyexen", branch = "feature/shuffles" }
polyexen = { git = "https://github.com/clvv/polyexen", branch = "serde" }
# polyexen = { path = "../../polyexen" }
# halo2_proofs = { git = "https://github.com/privacy-scaling-explorations/halo2.git", features = ["circuit-params"], rev = "d3746109d7d38be53afc8ddae8fdfaf1f02ad1d7" }
# halo2_proofs = "0.2"
halo2_proofs = { git = "https://github.com/privacy-scaling-explorations/halo2.git" }
# halo2_proofs = { git = "https://github.com/powdr-org/halo2", branch = "kilic/shuffle" }
# halo2_curves = { git = "https://github.com/privacy-scaling-explorations/halo2curves", tag = "0.3.3", package = "halo2curves" }
snark-verifier = { git = "https://github.com/privacy-scaling-explorations/snark-verifier" }
toml = "0.7.6"
ff = "0.13.0"
clap = { version = "4.3.19", features = ["derive"] }
